# django-pyproject

./: .gitignore  LICENSE  README.md  pyproject.toml
djpp/: __init__.py  pyproject.py
tests/: __init__.py  test_djpp.py
